--- a/lfcss/LFCSS.css
+++ b/lfcss/LFCSS.css
@@ -2,16 +2,35 @@
   box-sizing: border-box;
 }
 
+.header {
+  position: fixed;
+  top: 0;
+  z-index: 1;
+  width: 100%;
+  background-color: white;
+  overflow: hidden;
+}
+
+/* The progress container (grey background) */
+.progress-container {
+  width: 100%;
+  height: 8px;
+  background: #ccc;
+}
+
+/* The progress bar (scroll indicator) */
+.progress-bar {
+  height: 8px;
+  background: #4caf50;
+  width: 0%;
+}
+
 body {
   margin: 20px;
   font-family: sans-serif;
   font-weight: bold;
   font-size: 14pt;
-}
-
-.header {
-  text-align: center;
-  padding: 50px;
+  margin-top: 150px;
 }
 
 h1 {
