--- a/lfcss/LFCSS.css
+++ b/lfcss/LFCSS.css
@@ -5,7 +5,7 @@
 .header {
   position: fixed;
   top: 0;
-  z-index: 1;
+  z-index: 2;
   width: 100%;
   background-color: white;
   overflow: hidden;
@@ -20,8 +20,8 @@
 
 /* The progress bar (scroll indicator) */
 .progress-bar {
-  height: 8px;
-  background: #4caf50;
+  height: 10px;
+  background: red;
   width: 0%;
 }
 
@@ -30,15 +30,15 @@ body {
   font-family: sans-serif;
   font-weight: bold;
   font-size: 14pt;
-  margin-top: 150px;
+  margin-top: 100px;
 }
 
 h1 {
   font-family: sans-serif;
-  padding: 20px;
+  padding: 5px;
   font-weight: bold;
   text-align: left;
-  font-size: 50px;
+  font-size: 40px;
 }
 
 h2 {
@@ -52,6 +52,25 @@ img {
 	width: 100%;
 	border-radius: 40px;
 }
+
+/* Restaurant banner image */
+.textfloat {
+  position: relative;
+  text-align: center;
+  color: white;
+  width: 100%;
+  }
+
+.centered {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 3vw;
+  text-shadow: 0 0 3px black;
+  width: 80%;
+}
+
 
 .grid-container {
   display: grid;
@@ -87,6 +106,7 @@ img {
 	filter: blur(0px);
 	transition: filter 0.3s ease;
 	transform: scale(1);
+  z-index: 0.5;
 }
 .container:hover .overlay {
 	opacity: 1;
@@ -136,12 +156,7 @@ h5,
 h6 {
     margin:  1% 0 1% 0;
 }
-._12 {
-    font-size: 1.2em;
-}
-._14 {
-    font-size: 1.4em;
-}
+
 ul {
     padding:0;
     list-style: none;
