--- a/lfcss/LFCSS.css
+++ b/lfcss/LFCSS.css
@@ -21,7 +21,7 @@
 /* The progress bar (scroll indicator) */
 .progress-bar {
   height: 10px;
-  background: red;
+  background:	#D8BFD8;
   width: 0%;
 }
 
